# HWSE_Projektarbeit_S1_Hangman

./: CMakeLists.txt  README.md  Readme  compile.sh  dataLogging.c  dataLogging.h  doxyfile.txt  errorManagement.c  errorManagement.h  gameImplementation.c  gameImplementation.h  helperFunctions.c  helperFunctions.h  main.c  userInput.c  userInput.h  wordInputFile.c  wordInputFile.h
